@@ -1,3 +1,7 @@
+Sat Jun 19 13:24:15 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (method_call): allow changing $SAFE.  [ruby-dev:23713]
+
 Sat Jun 19 01:10:12 2004  Kouhei Sutou  <kou@cozmixng.org>
 
 	* sample/rss/tdiary_plugin/rss-recent.rb: added more information.
